// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CourseEnrollments /> renders course enrollments correctly with error 1`] = `
<div
  className="fade alert-content alert alert-danger show"
  role="alert"
>
  <span
    className="pgn__icon alert-icon"
  >
    <svg
      aria-hidden={true}
      fill="none"
      focusable={false}
      height={24}
      role="img"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
        fill="currentColor"
      />
    </svg>
  </span>
  <div
    className="pgn__alert-message-wrapper"
  >
    <div
      className="alert-message-content"
    >
      <div
        className="d-flex"
      >
        An error occurred while retrieving your course enrollments. Please try again.
      </div>
    </div>
  </div>
</div>
`;

exports[`<CourseEnrollments /> renders course enrollments correctly with loading 1`] = `
<div
  className="loading-spinner d-flex justify-content-center align-items-center"
>
  <div
    className="spinner-border text-primary"
    role="status"
  >
    <span
      className="sr-only"
    >
      loading course enrollments
    </span>
  </div>
</div>
`;

exports[`<CourseEnrollments /> renders course enrollments correctly with mark course as complete success status alert 1`] = `
<div
  className="fade alert-content alert alert-success show"
  role="alert"
>
  <span
    className="pgn__icon alert-icon"
  >
    <svg
      aria-hidden={true}
      fill="none"
      focusable={false}
      height={24}
      role="img"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        fill="currentColor"
      />
    </svg>
  </span>
  <div
    className="pgn__alert-message-wrapper"
  >
    <div
      className="alert-message-content"
    >
      <div
        className="d-flex"
      >
        Your course was marked as complete.
      </div>
    </div>
    <div
      className="pgn__alert-actions pgn__action-row"
    >
      <span
        className="pgn__action-row-spacer"
      />
      <button
        className="btn btn-tertiary btn-sm"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </div>
  </div>
</div>
`;
